--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "Jon Packer",
   "license": "MIT",
   "devDependencies": {
-    "mocha": "~1.13.0"
+    "mocha": "~1.13.0",
+    "supertest": "~0.8.0"
   }
 }
