--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "license": "MIT",
   "devDependencies": {
     "mocha": "~1.13.0",
-    "supertest": "~0.8.0"
+    "supertest": "~0.8.0",
+    "disposable-redis": "~1.0.2"
   }
 }
