--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
     "mocha": "~1.13.0",
     "supertest": "~0.8.0",
     "disposable-redis": "~1.0.2"
+  },
+  "dependencies": {
+    "express": "~3.4.0",
+    "object-path": "~0.1.0"
   }
 }
