--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "express": "~3.4.0",
-    "object-path": "~0.1.0"
+    "object-path": "~0.1.0",
+    "optimist": "~0.6.0"
   }
 }
