--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "express": "~3.4.0",
     "object-path": "~0.1.0",
-    "optimist": "~0.6.0"
+    "optimist": "~0.6.0",
+    "async": "~0.2.9"
   }
 }
