--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "~3.4.0",
     "object-path": "~0.1.0",
     "optimist": "~0.6.0",
-    "async": "~0.2.9"
+    "async": "~0.2.9",
+    "deep-extend": "~0.2.8"
   }
 }
