--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "disposable-redis": "~1.0.2"
   },
   "dependencies": {
+    "async": "~0.2.9",
+    "deep-extend": "~0.2.8",
     "express": "~3.4.0",
     "object-path": "~0.1.0",
     "optimist": "~0.6.0",
-    "async": "~0.2.9",
-    "deep-extend": "~0.2.8"
+    "redis": "^3.0.2"
   }
 }
